--- a/src/haml/options.haml
+++ b/src/haml/options.haml
@@ -9,7 +9,9 @@
   %head
     %meta{charset: "utf-8"}
     %title Vim Ratings Options
+    %link{rel: "stylesheet", type: "text/css", href: "/css/options.css"}
   %body
+    %img#logo{alt: "Logo", height: "48", src: "/img/icon_48.png", width: "48"}
     %h1 Vim Ratings Options
     %form#options_form
       %table
@@ -25,8 +27,6 @@
                 %td<
                   - if level != "dec" || option[:has_dec]
                     %input{type: "text", name: "#{option[:abbr]}#{level.capitalize}"}
-                  - else
-                    0
       %input{type: "submit", value: "Save"}
     %script{src: "/js/jquery-1.6.1.min.js", type: "text/javascript"}
     %script{src: "/js/options.js", type: "text/javascript"}
